# Low_power-projects

./: .gitignore  README.md  pyproject.toml
docs/: notebook structure.md  projects.md  repo structure.md
notebooks/: project-01.ipynb  project-02.ipynb  project-03.ipynb
res/libs/: RIT_Models_For_LTSPICE_MonteCarlo.txt  RIT_Models_For_LTSPICE_VTH_MC.txt
res/libs/vivado_comps/: full_adder.vhd  mux2.vhd  operand_gate.vhd  parity_check.vhd  rca.vhd  rtl_reg_sync.vhd
res/srcs/project-01/01-PMOS_sizing/: inverter_min_PMOS-sizing.asc
res/srcs/project-01/02-gamma_E/: inverter_Cd.asc  inverter_Cin.asc
res/srcs/project-01/03-gamma_D/: inverter_gamma_D.asc
res/srcs/project-01/04-montecarlo/: buffer_montecarlo.asc
res/srcs/project-01/06-verification/: buffer.asc
res/srcs/project-02/01-sizing/: sram_sizing_sweep_hold.asc  sram_sizing_sweep_read.asc
res/srcs/project-02/02-seevinck/: sram_seevinck.asc
res/srcs/project-02/03-montecarlo_interdie/: sram_mc_interdie.asc
res/srcs/project-02/04-montecarlo_intradie/: sram_mc_intradie.asc
res/srcs/project-03/vivado_constrs/: top.xdc
res/srcs/project-03/vivado_srcs/: top_baseline.vhd  top_isolated_reordering.vhd  top_registering.vhd  top_reordering.vhd  top_reordering_registering.vhd
res/srcs/project-03/vivado_tbs/: tb_top.vhd
scripts/: create_project.tcl  run_all.tcl  run_variant.tcl  variants.tcl
scripts/project-03/: create_project.tcl  run_all.tcl  run_sims.bat  run_variant.tcl  variants.tcl
